change jdk 21 to 17, fix getFirst() to get(0) for compile error